kubernetes-config/kubernetes-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socialconnect-backend-deployment
  namespace: socialconnect
spec:
  selector:
    matchLabels:
      app: socialconnect-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: socialconnect-backend
    spec:
      containers:
        - name: socialconnect-backend
          image: jayantmukundam/spe_major_project-server
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - name: http
              containerPort: 3001
          volumeMounts:
            - name: karaf-conf-storage
              mountPath: '/usr/src/app/src/logs'
        # Use hostPath here
      volumes:
        - name: karaf-conf-storage
          hostPath:
            path: '/tmp/data'
---
apiVersion: v1
kind: Service
metadata:
  name: socialconnect-backend-service
  namespace: socialconnect
spec:
  selector:
    app: socialconnect-backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
